tests/baselines/reference/initializersInDeclarations.errors.txt
==== tests/cases/compiler/initializersInDeclarations.ts (7 errors) ====
    
    // Errors: Initializers & statements in declaration file
    
    declare class Foo {
        name = "test";
          ~
!!! initializersInDeclarations.ts(5,7): error TS1039: Initializers are not allowed in ambient contexts.
        "some prop" = 42;
                 ~
!!! initializersInDeclarations.ts(6,14): error TS1039: Initializers are not allowed in ambient contexts.
        fn(): boolean {
                   ~
!!! initializersInDeclarations.ts(7,16): error TS1037: Implementations are not allowed in ambient contexts.
            return false;
        }
    }
    
    declare var x = [];
                  ~
!!! initializersInDeclarations.ts(12,15): error TS1039: Initializers are not allowed in ambient contexts.
    declare var y = {};
                  ~
!!! initializersInDeclarations.ts(13,15): error TS1039: Initializers are not allowed in ambient contexts.
    
    declare module M1 {
        while(true);
     ~~~~~
!!! initializersInDeclarations.ts(16,2): error TS1036: Statements are not allowed in ambient contexts.
    
        export var v1 = () => false;
                   ~
!!! initializersInDeclarations.ts(18,16): error TS1039: Initializers are not allowed in ambient contexts.
    }